# trading-bot

./: .gitignore  LICENSE  README.md  data_collection.ipynb  pyproject.toml  requirements.txt
algorithmic_trading/: data_collection.ipynb  data_manager.py  helper.py  main.ipynb
short_strategy_v1/: data_collection.ipynb  global_variables.py  highest_daily_movers.ipynb
tests/: api_tests.py  test_data_manager.py  test_helper.py
tests/Test-Data/: get_historical_tickers.parquet  get_paginated_request.parquet
